added embedding of career chatbot, but styling is off.

--- a/index.html
+++ b/index.html
@@ -32,12 +32,17 @@
             <h2>My Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <h3>Project Title 1 (e.g., Customer Support Chatbot)</h3>
-                    <p>This chatbot uses [key model/technology] to assist with customer inquiries about X, Y, and Z. Built to explore [learning goal/problem solved].</p>
-                    <p><strong>Technologies:</strong> Python, Hugging Face Transformers, Gradio, Pandas</p>
+                    <h3>Chat with me about my career!</h3>
+                    <p>This chatbot will answer all your questions about my career, studies, and skills. It's a great way to learn more about me and my background.</p>
+                    <p><strong>Technologies:</strong> Python, LLMs, Gradio, AI Agents</p>
                     <div class="project-links">
-                        <a href="https://huggingface.co/spaces" target="_blank" rel="noopener noreferrer" class="button">Live Demo</a>
-                        <a href="https://docs.github.com/en/repositories/creating-and-managing-repositories/quickstart-for-repositories" target="_blank" rel="noopener noreferrer" class="button">View Code</a>
+                        <iframe
+                            src="https://raznis-career-chatbot.hf.space"
+                            frameborder="0"
+                            width="850"
+                            height="450"
+                        ></iframe>
+                        <a href="https://raznis-career-chatbot.hf.space" target="_blank" rel="noopener noreferrer" class="button">Direct URL</a>
                     </div>
                 </div>
 
