--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Raz Nissim - Personal portfolio showcasing projects in AI, chatbots, and more.">
     <title>Raz Nissim - Portfolio</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/styleV2.css">
 </head>
+
 <body>
-    <header>
-        <div class="container"> <h1>Raz Nissim</h1>
+    <header id="navbar">
+        <div class="container">
+            <h1>Raz Nissim</h1>
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
@@ -22,28 +26,38 @@
 
     <main>
         <section id="about" class="container">
-            <h2>About Me</h2>
-            <p>My background is in computer science research. My Ph.D. was focused on automated planning, multi-agent systems, and algorithmic game-theory. While at Yahoo research, I worked on ad click-prediction modeling, and was responsible for online learning pipelines with a direct effect on revenue and >100M users. Since 2016, I'm at General Motors, where I have been hard at work building an awesome team of developers, system engineers, integration engineers, and SW validation engineers responsible for Simulation, Integration, and Testing efforts for the Ultracruise project and more. 
-            <br>More information and a full list of publications (with slides) can be found on my personal homepage (http://raznissim.wix.com/raznis).
-            <br>Specialties: Recommender systems, Click-Prediction, Artificial Intelligence, Automated Planning Systems, Multi-Agent Planning, Mechanism Design, AV simulation, AV validation/testing, SW validation/automation.</p>
+            <div id="aboutMe">
+                <h2>About Me</h2>
+                <p>My background is in computer science research. My Ph.D. was focused on automated planning,
+                    multi-agent
+                    systems, and algorithmic game-theory. While at Yahoo research, I worked on ad click-prediction
+                    modeling,
+                    and was responsible for online learning pipelines with a direct effect on revenue and >100M
+                    users.<br><br>Since
+                    2016, I'm at General Motors, where I have been hard at work building an awesome team of developers,
+                    system engineers, integration engineers, and SW validation engineers responsible for Simulation,
+                    Integration, and Testing efforts for the Ultracruise project and more.
+                    <br><br>More information and a full list of publications (with slides) can be found on my personal
+                    homepage
+                    (http://raznissim.wix.com/raznis).
+                    <br><br>Specialties: Recommender systems, Click-Prediction, Artificial Intelligence, Automated
+                    Planning
+                    Systems, Multi-Agent Planning, Mechanism Design, AV simulation, AV validation/testing, SW
+                    validation/automation.
+                </p>
+            </div>
+            <div id="backgroundToIframe">
+                <h3>Chat with me about my career!</h3>
+                <p>This chatbot will answer all your questions about my career, studies, and skills. It's a great
+                    way to learn more about me and my background.</p>
+                <iframe src="https://raznis-career-chatbot.hf.space" frameborder="0"></iframe>
+            </div>
         </section>
 
         <section id="projects" class="container">
             <h2>My Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <h3>Chat with me about my career!</h3>
-                    <p>This chatbot will answer all your questions about my career, studies, and skills. It's a great way to learn more about me and my background.</p>
-                    <p><strong>Technologies:</strong> Python, LLMs, Gradio, AI Agents</p>
-                    <div class="project-links">
-                        <iframe
-                            src="https://raznis-career-chatbot.hf.space"
-                            frameborder="0"
-                            width="850"
-                            height="450"
-                        ></iframe>
-                        <a href="https://raznis-career-chatbot.hf.space" target="_blank" rel="noopener noreferrer" class="button">Direct URL</a>
-                    </div>
                 </div>
 
                 <div class="project-card">
@@ -60,12 +74,16 @@
 
         <section id="contact" class="container">
             <h2>Get In Touch</h2>
-            <p>I'm always open to discussing new projects, creative ideas, or opportunities to be part of something exciting. Feel free to reach out!</p>
+            <p>I'm always open to discussing new projects, creative ideas, or opportunities to be part of something
+                exciting. Feel free to reach out!</p>
             <ul class="contact-links">
                 <li>Email: <a href="mailto:raznissim@gmail.com">Email Me</a></li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/raznis/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-                <li>GitHub: <a href="https://github.com/raznis" target="_blank" rel="noopener noreferrer">Github</a></li>
-                <li>Hugging Face: <a href="https://huggingface.co/raznis" target="_blank" rel="noopener noreferrer">Hugging Face</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/raznis/" target="_blank"
+                        rel="noopener noreferrer">LinkedIn</a></li>
+                <li>GitHub: <a href="https://github.com/raznis" target="_blank" rel="noopener noreferrer">Github</a>
+                </li>
+                <li>Hugging Face: <a href="https://huggingface.co/raznis" target="_blank"
+                        rel="noopener noreferrer">Hugging Face</a></li>
             </ul>
         </section>
     </main>
@@ -79,4 +97,5 @@
         </div>
     </footer>
 </body>
+
 </html>
